
CHANGES:
+ change schema of Implementation Version Name in META-INF/MANIFEST.MF and
  A-ASSOCIATE-RQ/AC to dcm4che-1.x.y (from DCM4CHEyyyymmdd)
+ add properties port and serverSocketFactory to org.dcm4che.server.Server
+ org.dcm4che.data.DcmObject: change getter methodes to do not throw
  org.dcm4che.data.DcmValueException, but return null or default value, if
  an decoding error occurs.   
  

-------------------------------------------------------------------------------
dcm4che 1.0.5 -  - Changes since dcm4che 1.0.4
-------------------------------------------------------------------------------
BUG FIXES:
+ org.dcm4che.srom.HL7Export#toHL7(String..):
  Fix Inconsistence between API and Implementation of String argument order
+ Fix bug in mppssnd utility (did not send anything)
+ add missing Def of Tag (0040,030E) Exposure Dose Sequence

ENHANCEMENTS:
org.dcm4che.data.Dataset:
+ Float getFloat(tag, index)
+ Double getDouble(tag, index)
org.dcm4che.hl7.MSHSegment
+ String getCharset

CHANGES:
+ ren build target publish to release
+ import TIANI IHE connectathon certficate to trusted cacerts
+ Tag.RefStudyComponentSeq -> Tag.RefPPSSeq (s. DICOM CP 257)

-------------------------------------------------------------------------------
dcm4che 1.0.4 -  - Changes since dcm4che 1.0.3
-------------------------------------------------------------------------------
BUG FIXES:
+ org.dcm4che.hl7.HL7Segment#id(): Fix StackOverflowError
+ org.dcm4che.net.ActiveAssociation: Fix wrong dispatch of N_CREATE_RQ dimse
  to DcmServiceBase#n_action handler
+ org.dcm4che.srom.SRDocumentFactory#newSRDocument(Dataset):
  Fix NullPointerException for Datasets without
  Content Template Sequence (0040,A504)

ENHANCEMENTS:
org.dcm4che.net.Association:
+ add properties rqTimeout, acTimeout, dimseTimeout
org.dcm4che.server.DcmHandler:
+ add properties rqTimeout, dimseTimeout, soCloseDelay
DcmSnd, MppsSnd:
+ add options --ac-timeout, --dimse-timeout, --so-close-delay
DcmRcv: