@@ -19,7 +19,9 @@ CHANGES:
 + add properties port and serverSocketFactory to org.dcm4che.server.Server
 + org.dcm4che.data.DcmObject: change getter methodes to do not throw
   org.dcm4che.data.DcmValueException, but return null or default value, if
-  an decoding error occurs.   
+  a decoding error occurs.
++ org.dcm4che.image.ColorModelFactory: replace DcmValueException by
+  IllegalArgumentException 
   
 
 -------------------------------------------------------------------------------
